--- a/docs/main.css
+++ b/docs/main.css
@@ -2,24 +2,23 @@ body {
   margin: 0;
   font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Tahoma, Geneva, sans-serif;
   font-size: 16px;
-  color: #111;
+  color: #24292e;
   line-height: 1.5;
 }
 
-code, pre {
+code, pre, code[class*=language-], pre[class*=language-] {
   font-family: Lucida Console, Monaco, monospace;
-  font-size: 14px;
+  font-size: 0.9em;
+}
+pre code[class*=language-] {
+  font-size: inherit;
 }
 
 :not(pre) > code {
-  background: #eeeeee;
+  background: #f5f2f0;
   padding: 1px 4px;
   border-radius: 3px;
   box-shadow: 0px 1px 1px #00000033;
-}
-
-code[class*=language-], pre[class*=language-] {
-  font-size: 14px;
 }
 
 li {
